--- a/app/views/spree/admin/reviews/index.html.erb
+++ b/app/views/spree/admin/reviews/index.html.erb
@@ -52,7 +52,7 @@
 				<th><%= sort_link @search, :product, Spree.t(:product) %></th>
 				<th><%= sort_link @search, :featured, Spree.t(:featured) %></th>
 				<th><%= sort_link @search, :rating, Spree::Review.human_attribute_name(:rating) %></th>
-				<th><%= Spree.t(:feedback) %></th>
+				<th><%= sort_link @search, :feedback_reviews_count, Spree.t(:feedback) %></th>
 				<th><%= Spree::Review.human_attribute_name(:image)  %></th>
 				<th><%= sort_link @search, :user, Spree::Review.human_attribute_name(:user) %></th>
 				<th><%= sort_link @search, :ip_address, Spree::Review.human_attribute_name(:ip_address) %></th>
@@ -65,7 +65,7 @@
 				<tr data-hook="admin_reviews_index_rows" id="<%= dom_id review %>" class="<%= cycle('odd', 'even') %>">
 					<td><%= review.product.name %></td>
           <td>
-						<%= link_to_with_icon review.featured ? 'cancel' : 'save', Spree.t(:featured), feature_admin_review_url(review), no_text: true, class: 'featured btn btn-default' %>
+						<%= link_to_with_icon review.featured ? 'save' : 'cancel', Spree.t(review.featured ? :featured : :not_featured), feature_admin_review_url(review), no_text: true, class: 'featured btn btn-default' %>
           </td>
 					<td><%= txt_stars(review.rating) %></td>
 					<td><%= link_to "(#{review.feedback_stars}/#{review.feedback_reviews.size})", admin_review_feedback_reviews_path(review) %></td>
